@@ -1,5 +1,4 @@
-# Compulsory line, this is a version 4 file
 version=4
-
-opts="repack,compression=xz,filenamemangle=s/.+\/v?(\d\S*)\.tar\.gz/shim-$1\.tar\.gz/" \
-  https://github.com/mjg59/shim/releases .*/v?(\d\S*)\.tar\.gz
+opts="mode=git, pgpmode=none" \
+  https://github.com/rhboot/shim.git \
+  HEAD main
